Fix info icon having different height on mobile

--- a/components/Project/project.module.css
+++ b/components/Project/project.module.css
@@ -1,5 +1,6 @@
 .moreInfo {
   width: 20px;
+  height: 20px;
 }
 
 .title {
@@ -7,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  align-items: center;
 }
 
 .title:after {
